--- a/ios/ClassCast/Info.plist
+++ b/ios/ClassCast/Info.plist
@@ -55,6 +55,11 @@
 	<array>
 		<string>Raleway.ttf</string>
 		<string>Roboto.ttf</string>
+		<string>Feather.ttf</string>
+		<string>Montserrat-Bold.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Raleway-Bold.ttf</string>
+		<string>Raleway-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
